--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="" class="bg-primary text-white py-[0.964vw] px-[1.615vw] hover:text-primary hover:bg-lightPrimary duration-300 ease-in rounded-full">Clone project</a>
             <a href="" class="leading-[1.1]">See All <br />Services</a>
           </div>
-          <div class="lightSkyGray text-[0.938vw] mt-[2.917vw] mb-[0.938vw]">Worked with 100+ Companies</div>
+          <div class="text-lightSkyGray tracking-[1px] text-[0.938vw] mt-[2.917vw] mb-[0.938vw]">Worked with 100+ Companies</div>
           <div class="flex gap-[2.344vw] items-center">
             <img src="assets/images/banner/logo_1.png" alt="" class="w-[7.448vw]" width="143" height="33" />
             <img src="assets/images/banner/logo_2.png" alt="" class="w-[7.292vw]" width="140" height="32" />
